--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,7 @@
 PORT=5000
-DB_USERNAME=keybrrr_app
 DB_PASSWORD=STRONG_PASSWORD
-DB_DATABASE=keybrrr
+DB_USERNAME=human_specs_app
+DB_DATABASE=human_specs_db
 DB_HOST=localhost
 JWT_SECRET=strong_random_bytes
 JWT_EXPIRES_IN=86400
