--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "faker": "^5.1.0",
     "js-cookie": "^2.2.1",
+    "random-words": "^1.1.1",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
